#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_psana
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-12
2013-03-13 Andy Salnikov
- regenerate whole thing from psddldata V00-04-13

Tag: V00-04-11
2013-03-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-12

Tag: V00-04-10
2013-03-10 Andy Salnikov
- regenerate whole thing from psddldata V00-04-11

Tag: V00-04-09
2013-03-04 Andy Salnikov
- regenerate whole thing from psddldata V00-04-10

Tag: V00-04-08
2013-03-04 Andy Salnikov
- regenerate whole thing from psddldata V00-04-09

Tag: V00-04-07
2013-02-26 Andy Salnikov
- regenerate whole thing from psddldata V00-04-07

Tag: V00-04-06
2013-02-26 Andy Salnikov
- regenerate whole thing from psddldata V00-04-06

Tag: V00-04-05
2013-02-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-05

Tag: V00-04-04
2013-02-06 Andy Salnikov
- regenerate whole thing from psddldata V00-04-04

Tag: V00-04-03
2013-02-05 Andy Salnikov
- regenerate whole thing from psddldata V00-04-03

Tag: V00-04-02
2013-02-05 Andy Salnikov
- upgrading to pdsdata V06-01-04
- regenerate whole thing from psddldata V00-04-02

Tag: V00-04-01
2013-02-04 Andy Salnikov
- upgrading to pdsdata V06-01-02
- regenerate whole thing from psddldata V00-04-01

Tag: V00-04-00
2013-01-30 Andy Salnikov
- switching to const ndarrays for array data

Tag: V00-03-17
2013-01-28 Andy Salnikov
- updates related to changes in ndarray constness

Tag: V00-03-16
2013-01-02 Andy Salnikov
- upgrading to pdsdata V05-03-00
- regenerate whole thing from psddldata V00-03-15

Tag: V00-03-15
2012-11-15 Andy Salnikov
- upgrading to pdsdata V05-01-00
- regenerate whole thing from psddldata V00-03-13

Tag: V00-03-14
2012-11-08 Andy Salnikov