@@ -102,6 +102,9 @@ private:
 class dbr_time_string {
 public:
   enum { DBR_TYPE_ID = DBR_TIME_STRING };
+  dbr_time_string()
+  {
+  }
   dbr_time_string(int16_t status, int16_t severity, const Epics::epicsTimeStamp& stamp)
     : _status(status), _severity(severity), _stamp(stamp)
   {
@@ -125,6 +128,9 @@ private:
 class dbr_time_short {
 public:
   enum { DBR_TYPE_ID = DBR_TIME_SHORT };
+  dbr_time_short()
+  {
+  }
   dbr_time_short(int16_t status, int16_t severity, const Epics::epicsTimeStamp& stamp)
     : _status(status), _severity(severity), _stamp(stamp), RISC_pad(0)
   {
@@ -149,6 +155,9 @@ private:
 class dbr_time_float {
 public:
   enum { DBR_TYPE_ID = DBR_TIME_FLOAT };
+  dbr_time_float()
+  {
+  }
   dbr_time_float(int16_t status, int16_t severity, const Epics::epicsTimeStamp& stamp)
     : _status(status), _severity(severity), _stamp(stamp)
   {
@@ -172,6 +181,9 @@ private:
 class dbr_time_enum {
 public:
   enum { DBR_TYPE_ID = DBR_TIME_ENUM };
+  dbr_time_enum()
+  {
+  }
   dbr_time_enum(int16_t status, int16_t severity, const Epics::epicsTimeStamp& stamp)
     : _status(status), _severity(severity), _stamp(stamp), RISC_pad(0)
   {
@@ -196,6 +208,9 @@ private:
 class dbr_time_char {
 public:
   enum { DBR_TYPE_ID = DBR_TIME_CHAR };
+  dbr_time_char()
+  {
+  }
   dbr_time_char(int16_t status, int16_t severity, const Epics::epicsTimeStamp& stamp)
     : _status(status), _severity(severity), _stamp(stamp), RISC_pad1(0)
   {
@@ -221,6 +236,9 @@ private:
 class dbr_time_long {
 public:
   enum { DBR_TYPE_ID = DBR_TIME_LONG };
+  dbr_time_long()
+  {
+  }
   dbr_time_long(int16_t status, int16_t severity, const Epics::epicsTimeStamp& stamp)
     : _status(status), _severity(severity), _stamp(stamp)
   {
@@ -244,6 +262,9 @@ private:
 class dbr_time_double {
 public:
   enum { DBR_TYPE_ID = DBR_TIME_DOUBLE };
+  dbr_time_double()
+  {
+  }
   dbr_time_double(int16_t status, int16_t severity, const Epics::epicsTimeStamp& stamp)
     : _status(status), _severity(severity), _stamp(stamp), RISC_pad(0)
   {
@@ -268,6 +289,9 @@ private:
 class dbr_sts_string {
 public:
   enum { DBR_TYPE_ID = DBR_CTRL_STRING };
+  dbr_sts_string()
+  {
+  }
   dbr_sts_string(int16_t status, int16_t severity)
     : _status(status), _severity(severity)
   {
@@ -289,6 +313,9 @@ private:
 class dbr_ctrl_short {
 public:
   enum { DBR_TYPE_ID = DBR_CTRL_SHORT };
+  dbr_ctrl_short()
+  {
+  }
   dbr_ctrl_short(int16_t status, int16_t severity, const char* units, int16_t upper_disp_limit, int16_t lower_disp_limit, int16_t upper_alarm_limit, int16_t upper_warning_limit, int16_t lower_warning_limit, int16_t lower_alarm_limit, int16_t upper_ctrl_limit, int16_t lower_ctrl_limit)
     : _status(status), _severity(severity), _upper_disp_limit(upper_disp_limit), _lower_disp_limit(lower_disp_limit), _upper_alarm_limit(upper_alarm_limit), _upper_warning_limit(upper_warning_limit), _lower_warning_limit(lower_warning_limit), _lower_alarm_limit(lower_alarm_limit), _upper_ctrl_limit(upper_ctrl_limit), _lower_ctrl_limit(lower_ctrl_limit)
   {
@@ -331,6 +358,9 @@ private:
 class dbr_ctrl_float {
 public:
   enum { DBR_TYPE_ID = DBR_CTRL_FLOAT };
+  dbr_ctrl_float()
+  {
+  }
   dbr_ctrl_float(int16_t status, int16_t severity, int16_t precision, const char* units, float upper_disp_limit, float lower_disp_limit, float upper_alarm_limit, float upper_warning_limit, float lower_warning_limit, float lower_alarm_limit, float upper_ctrl_limit, float lower_ctrl_limit)
     : _status(status), _severity(severity), _precision(precision), RISC_pad(0), _upper_disp_limit(upper_disp_limit), _lower_disp_limit(lower_disp_limit), _upper_alarm_limit(upper_alarm_limit), _upper_warning_limit(upper_warning_limit), _lower_warning_limit(lower_warning_limit), _lower_alarm_limit(lower_alarm_limit), _upper_ctrl_limit(upper_ctrl_limit), _lower_ctrl_limit(lower_ctrl_limit)
   {
@@ -376,6 +406,9 @@ private:
 class dbr_ctrl_enum {
 public:
   enum { DBR_TYPE_ID = DBR_CTRL_ENUM };
+  dbr_ctrl_enum()
+  {
+  }
   dbr_ctrl_enum(int16_t status, int16_t severity, int16_t no_str, const char* strings)
     : _status(status), _severity(severity), _no_str(no_str)
   {
@@ -404,6 +437,9 @@ private:
 class dbr_ctrl_char {
 public:
   enum { DBR_TYPE_ID = DBR_CTRL_CHAR };
+  dbr_ctrl_char()
+  {
+  }
   dbr_ctrl_char(int16_t status, int16_t severity, const char* units, uint8_t upper_disp_limit, uint8_t lower_disp_limit, uint8_t upper_alarm_limit, uint8_t upper_warning_limit, uint8_t lower_warning_limit, uint8_t lower_alarm_limit, uint8_t upper_ctrl_limit, uint8_t lower_ctrl_limit)
     : _status(status), _severity(severity), _upper_disp_limit(upper_disp_limit), _lower_disp_limit(lower_disp_limit), _upper_alarm_limit(upper_alarm_limit), _upper_warning_limit(upper_warning_limit), _lower_warning_limit(lower_warning_limit), _lower_alarm_limit(lower_alarm_limit), _upper_ctrl_limit(upper_ctrl_limit), _lower_ctrl_limit(lower_ctrl_limit), RISC_pad(0)
   {
@@ -447,6 +483,9 @@ private:
 class dbr_ctrl_long {
 public:
   enum { DBR_TYPE_ID = DBR_CTRL_LONG };
+  dbr_ctrl_long()
+  {
+  }
   dbr_ctrl_long(int16_t status, int16_t severity, const char* units, int32_t upper_disp_limit, int32_t lower_disp_limit, int32_t upper_alarm_limit, int32_t upper_warning_limit, int32_t lower_warning_limit, int32_t lower_alarm_limit, int32_t upper_ctrl_limit, int32_t lower_ctrl_limit)
     : _status(status), _severity(severity), _upper_disp_limit(upper_disp_limit), _lower_disp_limit(lower_disp_limit), _upper_alarm_limit(upper_alarm_limit), _upper_warning_limit(upper_warning_limit), _lower_warning_limit(lower_warning_limit), _lower_alarm_limit(lower_alarm_limit), _upper_ctrl_limit(upper_ctrl_limit), _lower_ctrl_limit(lower_ctrl_limit)
   {
@@ -489,6 +528,9 @@ private:
 class dbr_ctrl_double {
 public:
   enum { DBR_TYPE_ID = DBR_CTRL_DOUBLE };
+  dbr_ctrl_double()
+  {
+  }
   dbr_ctrl_double(int16_t status, int16_t severity, int16_t precision, const char* units, double upper_disp_limit, double lower_disp_limit, double upper_alarm_limit, double upper_warning_limit, double lower_warning_limit, double lower_alarm_limit, double upper_ctrl_limit, double lower_ctrl_limit)
     : _status(status), _severity(severity), _precision(precision), RISC_pad0(0), _upper_disp_limit(upper_disp_limit), _lower_disp_limit(lower_disp_limit), _upper_alarm_limit(upper_alarm_limit), _upper_warning_limit(upper_warning_limit), _lower_warning_limit(lower_warning_limit), _lower_alarm_limit(lower_alarm_limit), _upper_ctrl_limit(upper_ctrl_limit), _lower_ctrl_limit(lower_ctrl_limit)
   {
@@ -540,8 +582,6 @@ public:
   virtual int16_t dbrType() const = 0;
   /** Number of elements in EPICS DBR structure */
   virtual int16_t numElements() const = 0;
-  /** Dumps the content of PV to standard output. */
-  virtual void print() const = 0;
   /** Returns 1 if PV is one of CTRL types, 0 otherwise. */
   virtual uint8_t isCtrl() const = 0;
   /** Returns 1 if PV is one of TIME types, 0 otherwise. */
@@ -783,15 +823,30 @@ public:
   
 */
 
+#pragma pack(push,4)
 
 class PvConfigV1 {
 public:
   enum { iMaxPvDescLength = 64 };
-  virtual ~PvConfigV1();
-  virtual int16_t pvId() const = 0;
-  virtual const char* description() const = 0;
-  virtual float interval() const = 0;
+  PvConfigV1()
+  {
+  }
+  PvConfigV1(int16_t arg_iPvId, const char* arg_sPvDesc, float arg_fInterval)
+    : iPvId(arg_iPvId), fInterval(arg_fInterval)
+  {
+    std::copy(arg_sPvDesc, arg_sPvDesc+(64), sPvDesc);
+  }
+  int16_t pvId() const { return iPvId; }
+  const char* description() const { return sPvDesc; }
+  float interval() const { return fInterval; }
+  static uint32_t _sizeof()  { return ((((((2+(1*(iMaxPvDescLength)))+2)+4)+4)-1)/4)*4; }
+private:
+  int16_t	iPvId;
+  char	sPvDesc[iMaxPvDescLength];
+  int16_t	_pad0;
+  float	fInterval;
 };
+#pragma pack(pop)
 
 /** @class ConfigV1
 
@@ -805,9 +860,7 @@ public:
   enum { Version = 1 /**< XTC type version number */ };
   virtual ~ConfigV1();
   virtual int32_t numPv() const = 0;
-  virtual const Epics::PvConfigV1& pvControls(uint32_t i0) const = 0;
-  /** Method which returns the shape (dimensions) of the data returned by pvControls() method. */
-  virtual std::vector<int> pvControls_shape() const = 0;
+  virtual ndarray<const Epics::PvConfigV1, 1> pvControls() const = 0;
 };
 } // namespace Epics
 } // namespace Psana
