@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-13
+2013-03-14 Andy Salnikov
+- regenerate whole thing from psddldata V00-04-14
+- extend EpicsLib.h with some template metaprogramming stuff
+
 Tag: V00-04-12
 2013-03-13 Andy Salnikov
 - regenerate whole thing from psddldata V00-04-13
